Ajustes archivos a ignorar

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-images/res
-images/jsat-main/jsatconfig
-images/jsat-ov/jsatconfig
+jsat/images/res
+jsat/images/jsat-main/jsatconfig
+jsat/images/jsat-ov/jsatconfig
